--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,23 @@
 # Site wide configuration
 ####################################
 #
-title: Leonids
+name: Nette tutors
+title: Nette Tutors | Monday Factory
 email:
-description: A simple and awesome blog theme powered by jekyll.
+description: Nette tutorials blog-like website
 url: https://monday-factory.github.io/nette-tutors
-
+owner:
+  name: Monday Factory
+  homepage: https://mondayfactory.com
+posts:
+  authors: [Pavel Janda]
 
 #
 ###################################
 # Jekyll configuration
 ####################################
 #
-timezone:          Europe/Paris
+timezone:          Europe/Prague
 markdown:          kramdown
 highlighter:       rouge
 excerpt_separator: <!--more-->
@@ -32,38 +37,3 @@ kramdown:
 # Site Owner configuration
 ####################################
 #
-owner:
-  name: Leonids
-  avatar: leonids-logo.png
-  job: "A jekyll theme"
-  bio: "A simple and awesome blog theme powered by jekyll."
-  email:
-  disqus-shortname:
-  twitter: #username
-  facebook: #username
-  google:
-    plus: #username
-    analytics:
-    verify:
-    ad-client:
-    ad-slot:
-  bing-verify:
-  github: #username
-  gitlab: #username
-  stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
-  linkedin: #username
-  skype: #username
-  xing: #username
-  instagram: #username
-  lastfm: #username
-  tumblr: #username
-  pinterest: #username
-  foursquare: #username
-  steam: #username
-  dribbble: #username
-  youtube: #username
-  soundcloud: #username
-  weibo: #username
-  flickr: #username
-  500px: #username
-  codepen: #username
