Chapter 1 - Have you met Nette?

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Site wide configuration
 ####################################
 #
-name: Nette tutors
+name: Nette Tutors
 title: Nette Tutors | Monday Factory
 email:
 description: Nette tutorials blog-like website
